👌 IMPROVE: Ajout du Slider

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,16 +16,5 @@ html {
 
 body {
   font-family: $font-fam;
-  height: 100%;
-  background: #ececec;
-}
-
-/* Loader */
-.fa-spinner {
-  font-size: 80px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: $dark-green;
+  background: $blue-grey;
 }
