--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -8,7 +8,7 @@
   margin: 100px auto 0;
   position: relative;
   overflow: hidden;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px $light-black;
   border-radius: 10px;
 }
 
@@ -47,10 +47,11 @@
     border-radius: 50%;
     border: 3px solid $light-grey;
     margin: 0 5px;
-    background: #f1f1f1;
+    background:  $light-grey;
+    cursor: pointer;
 
     &.active {
-      background: rgb(32, 32, 32);
+      background: $black;
     }
   }
 }
